# switchboard-plug-bluetooth

./: .travis.yml  CMakeLists.txt  INSTALL  README.md  meson.build
.github/workflows/: gettext.yml  githubci.yml  release.yml
data/: bluetooth.appdata.xml.in  bluetooth.metainfo.xml.in  io.elementary.switchboard-plug-bluetooth.appdata.xml.in  io.elementary.switchboard.bluetooth.appdata.xml.in  meson.build
debian/: changelog  control  copyright  rules
po/: CMakeLists.txt  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bluetooth-plug.pot  bm.po  bn.po  bo.po  br.po  bs.po  btk.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+164 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+159 more)
src/: CMakeLists.txt  DeviceRow.vala  DeviceView.vala  HeaderAdapter.vala  MainView.vala  PairDialog.vala  Plug.vala  meson.build
src/Services/: Adapter.vala  Agent.vala  Device.vala  Manager.vala
